# CubeSat-Cmake-Eigen-Setup

./: ADCS_Eigen  ADCS_Eigen.cpp  ADCS_Eigen.sln  ADCS_Eigen.vcxproj  ADCS_Eigen.vcxproj.filters  CMakeLists.txt  IGRF.h  IGRF12.txt  README.md
Debug/: ADCS_Eigen.ilk  ADCS_Eigen.pch  vc141.idb
Debug/ADCS_Eigen.tlog/: ADCS_Eigen.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
